Deprecated event constant updated